about.css
body {
    margin: 0;
    clear: both;
    min-width: 720px;
}

ul.topnav {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;
}

ul.topnav li {
    float: left;
}

ul.topnav li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

ul.topnav li a:hover:not(.active) {
    background-color: #111;
}

@media screen and (max-width: 600px) {
    ul.topnav li.right, ul.topnav li {
        float: none;
    }
}

body {
    color: #222222;
    font-size: 1em;
    font-family: "Open Sans", "Helvetica Neue", sans-serif;
}

.content-footer, .masthead-heading, .masthead-intro {
    text-align: center;
}

.masthead-intro {
    margin-bottom: 0.1em;
    font-family: "Gentium Book Basic", Georgia, serif;
    font-size: 2em;
}

.introduction-section>p, .content-footer>p {
    font-weight: 300;
    letter-spacing: 0.05em;
}

section>h1 {
    margin-top: 2em;
}

.masthead {
    padding: 16px 0;
    background-color: #723130;
    background-size: cover;
    background-repeat: no-repeat;
}

.masthead-intro {
    margin-top: 20px;
    margin-bottom: 0.1em;
    font-family: "Gentium Book Basic", Georgia, serif;
    font-size: 2em;
}

.masthead-heading {
    color: #F7EDE1;
    margin-top: -0.15em;
    font-family: "Open Sans", "Helvetica Neue", sans-serif;
    font-weight: bold;
    font-size: 4em;
    letter-spacing: -0.02em;
    text-transform: uppercase;
    margin-bottom: 20px;
}

.introduction>p, .content-footer>p, .background>p {
    letter-spacing: 0.05em;
}

.introduction-section {
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 25px;
}

.contact-body {
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
}

.history-body {
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
}

.button-section {
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 71px;
}

.center {
    display: flex;
    align-items: center;
    justify-content: center;
}

.goback-connect, .goback-history {
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 25px;
}

.fakemasthead {
    height: 75px;
}

.fakemasthead>button {
    float: right;
}

.introduction>h1, .background>h1 {
    color: #723130;
}

.content-footer {
    margin: 0px 0;
    padding: 10px 0;
    text-align: center;
    background-color: #723130;
    text-decoration: none;
    position: absolute;
    Width: 100%;
    bottom: 0;
}

.social {
    padding-inline-start: 0px;
}

.social>li {
    display: inline-block;
    margin: 0 5px;
}

.content-footer>p {
    color: #F7EDE1;
}

.footerlinks {
    font-weight: bold;
    text-decoration: none;
    color: #F7EDE1;
}

.workrow>h2, .workrow>p, .tl>p, .tl>h2, .tr>p, .tr>h2, .bl>p, .bl>h2, .br>p, .br>h2 {
    color: var(--cola);
}

@media only screen and (max-width: 500px) {
    .masthead {
        padding: 3em 0;
    }
    .masthead-heading {
        font-size: 3em;
    }
    .content-footer {
        padding: 2em 2.5em;
    }
}

.grid-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-template-areas: "it it hs";
    margin-bottom: 20px;
}

.work-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-template-areas: "desc desc ph";
    margin-bottom: 20px;
    border-radius: 25px;
    border: 2px solid var(--cola);
    padding: 20px;
}

.contact-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 0px 0px;
    grid-template-areas: "tl tr" "bl br";
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
}

.tl, .tr, .bl, .br {
    border-radius: 25px;
    border: 2px solid var(--cola);
    padding: 20px;
    margin: 20px;
    height: 216px;
}

.tl:hover, .tr:hover, .bl:hover, .br:hover {
    background-color: var(--colc);
}

.tl {
    grid-area: tl;
}

.tr {
    grid-area: tr;
}

.bl {
    grid-area: bl;
}

.br {
    grid-area: br;
}

.headshot {
    grid-area: hs;
}

.introduction {
    grid-area: it;
    margin-right: 20px;
}

.workrow {
    grid-area: desc;
    margin-right: 20px;
}

.workph {
    grid-area: ph;
    display: flex;
    align-items: center;
    justify-content: center;
}

.background {
    width: 100%;
    border-top: solid 1px #723130;
    border-bottom: solid 1px #723130;
    margin-bottom: 20px;
}

img {
    border-radius: 10%;
}

#page-container {
    position: relative;
    min-height: 100vh;
}

.footer {
    position: fixed;
    overflow: auto;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #723130;
    text-align: center;
}

.tester {
    color: #503232
}

:root {
    --cola: #F7EDE1;
    --colb: #572726;
    --colc: #503232;
    --cold: #333;
    --cole: #252525;
}

button {
    height: 50px;
    width: 200px;
    cursor: pointer;
    outline: none;
    border: 0;
    font-size: 1em;
    color: var(--cola);
    text-transform: uppercase;
    font-family: inherit;
}

button.big-button {
    margin-right: 25px;
    display: inline-block;
    border: 2px solid var(--cola);
    border-radius: 1em;
    background: var(--cole);
    transform-style: preserve-3d;
    transition: all 175ms cubic-bezier(0, 0, 1, 1);
}

button.big-button::before {
    position: absolute;
    content: '';
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: var(--colc);
    border-radius: inherit;
    transform: translate3d(0, 0.75em, -1em);
    transition: all 175ms cubic-bezier(0, 0, 1, 1);
}

button.big-button:hover {
    background: var(--cold);
    transform: translate(0, 0.375em);
}

button.big-button:hover::before {
    transform: translate3d(0, 0.75em, -1em);
}

button.big-button:active {
    transform: translate(0em, 0.75em);
}

button.big-button:active::before {
    transform: translate3d(0, 0, -1em);
}

/* timeline css */
.timeline-content>p {
    font-weight: 300;
}

.timeline-content>a {
    color: #6c6d6d;
    text-decoration: none;
    text-transform: uppercase;
    display: block;
    letter-spacing: 0.3em;
    font-size: 0.6em;
    font-weight: 400;
    background: #252727;
    padding: 0.3rem 1rem;
    margin: 1.9rem 0 0 0;
    float: right;
}

.timeline-content>strong {
    font-weight: 600;
}

.timeline-content>h1 {
    letter-spacing: 1.5px;
    color: white;
    font-weight: 400;
    font-size: 2.4em;
}

#timeline-content {
    margin-top: 50px;
    padding-left: 200px;
    text-align: center;
}

/* Timeline */

.timeline {
    border-left: 4px solid #000000;
    border-bottom-right-radius: 4px;
    border-top-right-radius: 4px;
    background: rgba(255, 255, 255, 0.03);
    color: rgba(255, 255, 255, 0.8);
    margin: 50px auto;
    letter-spacing: 0.5px;
    position: relative;
    line-height: 1.4em;
    font-size: 1.03em;
    padding: 50px;
    list-style: none;
    text-align: left;
    font-weight: 100;
    max-width: 80%;
}

.timeline .timeline-content>h1 {
    letter-spacing: 1.5px;
    font-weight: 100;
    font-size: 1.4em;
}

.timeline .timeline-content>h2, .timeline .timeline-content>h3 {
    letter-spacing: 1.5px;
    font-weight: 400;
    font-size: 1.4em;
}

.timeline .timeline-event {
    border-bottom: 1px dashed rgba(255, 255, 255, 0.1);
    padding-bottom: 25px;
    margin-bottom: 50px;
    position: relative;
}

.timeline .timeline-event:last-of-type {
    padding-bottom: 0;
    margin-bottom: 0;
    border: none;
}

.timeline .timeline-event:before, .timeline .timeline-event:after {
    position: absolute;
    display: block;
    top: 0;
}

.timeline .timeline-event:before {
    left: -217.5px;
    color: rgba(255, 255, 255, 0.4);
    content: attr(data-date);
    text-align: right;
    font-weight: 100;
    font-size: 0.9em;
    min-width: 120px;
}

.timeline .timeline-event:after {
    box-shadow: 0 0 0 4px #503232;
    left: -57.85px;
    background: #313534;
    border-radius: 50%;
    height: 11px;
    width: 11px;
    content: "";
    top: 5px;
}

